src/components/Pages/Profile.css
body {
    background-color: black;
}

.profile-page {
    margin-top: 10vh; 
    justify-content: center;
    text-align: center;
    color: white;
    display: block;
}

.profile-header {
    font-size: 5rem;
    text-shadow: 5px 5px 0px gray;
}

/* this is the personal info and attributes */

.personal-attribute {
    display: flex;
    flex-direction: column;
    height: 90vh;
}

.personal-attribute-col {
    display: flex;
}

.personal-column {
    display: flex;
    padding: 30px;
    width: 50%;
    justify-content: center;
}

.personal-img {
   border-radius: 25px;
}

.attribute-column {
    width: 50%;
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    padding: 30px 30px 30px 0px;
}

.attribute {
    padding: 10%;
    margin: 5%;
    border: solid 2px white;
    border-radius: 20px;
    align-items: center;
    justify-content: center;
    text-align: left;
}

.attribute-time {
    color: #FC6D6D;
    font-size: 3rem;
    text-align: left;
    padding-top: 2%;
    padding-bottom: 2%;
}

.attribute-name {
    font-size: 1rem;
    text-align: left;
}

.fa-laptop-code {
    color: #9c51b6;
    font-size: 2rem;
    text-align: center;
}

.fa-code {
    color: #9c51b6;
    font-size: 2rem;
    text-align: center;
}

.fa-book {
    color: #9c51b6;
    font-size: 2rem;
    text-align: center;
}

.fa-square-poll-vertical {
    color: #9c51b6;
    font-size: 2rem;
    text-align: center;
}

/* this is the education experience title */

.edu-exp-title {
    font-size: 2rem;
    padding-bottom: 0.5rem;
    padding-top: 0.5rem;
}

.edu-exp-column {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
}

/* this is the education column */

.edu-column {
    display: flex;
    flex-direction: column;
    text-align: left;
    padding-left: 5%;
    padding-right: 5%;
}

.school {
    margin: 1rem;
    margin-left: 0;
}

.school-icon-name {
    display: flex;
    align-items: center;
    padding-left: none;
}

.fa-user-graduate {
    font-size: 2rem;
    padding: 10px 14px;    
}

.fa-certificate {
    font-size: 2rem;
    padding: 10px;
}
.fa-crown {
    font-size: 2rem;
    padding: 10px;
}

.school-name {
    font-size: 1.5rem;
    margin-left: 16px;
}

.school-icon-cover {
    border-radius: 50px;
    background-color: #417dc1;
    width: fit-content;
}

.school-info {
    border-left: solid 2px #417dc1;
    padding-left: 42px;
    margin-left: 25px;
}

.school-time-border {
    background-color: grey;
    width: fit-content;
    height: fit-content;
    padding: 1px;
    padding-right: 10px;
    padding-left: 10px;
    border-radius: 20px;
    margin-bottom: 0.5rem;
    
}

.school-time {
    text-align: center;
}

.school-degree {
    font-size: 1rem;
    color: gray;
    padding-bottom: 0.3rem;
}

.school-desc {
    font-size: 1rem;
    color: gray;
    padding-bottom: 0.3rem;
}

/* this is the experience column */

.exp-column {
    display: flex;
    flex-direction: column;
    text-align: left;
    padding-left: 5%;
    padding-right: 5%;
}

.company {
    margin: 1rem;
    margin-left: 0;
}

.company-icon-name {
    display: flex;
    align-items: center;
    padding-left: none;
}

.fa-briefcase {
    font-size: 28px;
    padding: 12px 14px;       
}

.company-name {
    font-size: 1.5rem;
    margin-left: 16px;
}

.company-icon-cover {
    border-radius: 50px;
    background-color: orange;
    width: fit-content;
}

.company-info {
    border-left: solid 2px orange;
    padding-left: 42px;
    margin-left: 25px;
}

.company-time-border {
    background-color: grey;
    width: fit-content;
    height: fit-content;
    padding: 1px;
    padding-right: 10px;
    padding-left: 10px;
    border-radius: 20px;
    margin-bottom: 0.5rem;
    
}

.company-time {
    text-align: center;
}

.company-role {
    font-size: 1rem;
    color: gray;
    padding-bottom: 0.3rem;
}

.company-desc {
    font-size: 1rem;
    color: gray;
    padding-bottom: 0.3rem;
}

/* this is the skills column */

.skills-title {
    font-size: 2rem;
    padding-bottom: 0.5rem;
    padding-top: 0.5rem;
    text-align: left;
    padding-left: 2.5%;
}

.skills {
    display: grid;
    grid-template-columns: repeat(8, minmax(0, 1fr));
    text-align: left;
    padding: 0 2.5% 2.5% 2.5%;
    align-items: center;
    justify-content: center;
}

.skill-sec {
    margin: auto;
    margin-bottom: 20px;
    margin-top: 20px;
}

.skill-name {
    font-size: 1rem;
    border: solid 3px green;
    padding: 36px 10px 36px 10px;
    border-radius: 100px;
    width: 99px;
    text-align: center;
}

@media screen and (max-width: 1000px) {
    .profile-header {
        font-size: 3rem;
        text-shadow: 3px 3px 0px gray;
        overflow: hidden;
    }

    .personal-column {
        overflow: hidden;
        height: 50vh;
        width: auto;
        margin: auto;
        align-items: center;
        padding: 10px;
    }
    
    .edu-exp-column {
        display: flex;
        flex-direction: column;
    }

    .personal-attribute-col {
        flex-direction: column;
    }

    .personal-img {
        width: 90vw;
    }

    .attribute {
        padding: 5%;
        border-radius: 10px;
        overflow: hidden;
    }

    .attribute-column {
        height: 50%;
        width: 100%;
        padding: 10px;
    }

    .attribute-time {
        font-size: 1.5rem;
        padding-top: 0.2rem;
        padding-bottom: 0.2rem;
    }
    
    .attribute-name {
        font-size: 10px;
    }
    
    .fa-laptop-code {
        font-size: 1rem;
    }
    
    .fa-code {
        font-size: 1rem;
    }
    
    .fa-book {
        font-size: 1rem;
    }

    .fa-square-poll-vertical {
        font-size: 1rem;
    }
    
    .school-name {
        font-size: 20px;
    }

    .school-time {
        font-size: 14px;
    }

    .school-degree {
        font-size: 14px;
    }

    .school-desc {
        font-size: 14px;
    }

    .company-name {
        font-size: 20px;
    }

    .company-time {
        font-size: 14px;
    }

    .company-role {
        font-size: 14px;
    }

    .company-desc {
        font-size: 14px;
    }
    
    .skills {
        grid-template-columns: repeat(3, minmax(0, 1fr));
    }

    .skills-title {
        font-size: 2rem;
        padding-bottom: 0.5rem;
        padding-top: 0.5rem;
        text-align: left;
        padding-left: 5%;
    }

    .skill-sec {
        margin-bottom: 10px;
        margin-top: 10px;
    }
    
    .skill-name {
        font-size: 1rem;
        border: solid 3px green;
        padding: 36px 10px 36px 10px;
        border-radius: 100px;
        width: 99px;
        text-align: center;
    }
}

